// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be facing down 1`] = `
.c0 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

<div>
  <svg
    class="c0"
    color="red"
    height="30px"
    viewBox="0 0 9 6"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.058 4.594L1.185 1.72a.312.312 0 1 1 .442-.442L4.5 4.152l2.873-2.873a.312.312 0 1 1 .442.442L4.723 4.812a.316.316 0 0 1-.446 0l-.219-.218z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`should be facing to the left 1`] = `
.c0 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

<div>
  <svg
    class="c0"
    color="red"
    height="30px"
    viewBox="0 0 9 6"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.058 4.594L1.185 1.72a.312.312 0 1 1 .442-.442L4.5 4.152l2.873-2.873a.312.312 0 1 1 .442.442L4.723 4.812a.316.316 0 0 1-.446 0l-.219-.218z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`should be facing to the right 1`] = `
.c0 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div>
  <svg
    class="c0"
    color="red"
    height="30px"
    viewBox="0 0 9 6"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.058 4.594L1.185 1.72a.312.312 0 1 1 .442-.442L4.5 4.152l2.873-2.873a.312.312 0 1 1 .442.442L4.723 4.812a.316.316 0 0 1-.446 0l-.219-.218z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`should be facing up 1`] = `
.c0 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<div>
  <svg
    class="c0"
    color="red"
    height="30px"
    viewBox="0 0 9 6"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.058 4.594L1.185 1.72a.312.312 0 1 1 .442-.442L4.5 4.152l2.873-2.873a.312.312 0 1 1 .442.442L4.723 4.812a.316.316 0 0 1-.446 0l-.219-.218z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`should get classname 1`] = `
.c0 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div>
  <svg
    class="c0 test"
    color="red"
    height="30px"
    viewBox="0 0 9 6"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.058 4.594L1.185 1.72a.312.312 0 1 1 .442-.442L4.5 4.152l2.873-2.873a.312.312 0 1 1 .442.442L4.723 4.812a.316.316 0 0 1-.446 0l-.219-.218z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`should match snapshot 1`] = `
.c0 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div>
  <svg
    class="c0"
    color="red"
    height="30px"
    viewBox="0 0 9 6"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.058 4.594L1.185 1.72a.312.312 0 1 1 .442-.442L4.5 4.152l2.873-2.873a.312.312 0 1 1 .442.442L4.723 4.812a.316.316 0 0 1-.446 0l-.219-.218z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;
